# AstoniaMod

./: .gitignore  CMakeLists.txt
include/: amod.h
src/: library.cpp  library.h
